Revision history for {{$dist->name}}

{{$NEXT}}
          - drop prereq requirement on Dist::Zilla 5.x

0.007     2014-01-25 03:20:52Z
          - now using a filefinder to find all modules to check -- now only
            checking files in lib/ by default

0.006     2013-12-07 22:27:04Z
          - now also checking for develop prereqs, that aren't listed in
            'provides' metadata

0.005     2013-10-26 01:31:06Z
          - set minimum version prereq for Module::Metadata

0.004     2013-10-24 04:17:27Z
          - fixes for Dist::Zilla 5.x, where we need to set the binmode on the
            fh before opening to the encoded content (we are still compatible
            with older Dist::Zilla as well)

0.003     2013-10-18 01:13:36Z
          - properly handle .pm files that don't exist on disk yet (e.g.
            ::Conflicts)

0.002     2013-10-17 02:58:11Z
          - skip checking develop prereqs, (it is not horrible for a plugin or
            bundle to list itself as a develop prereq)

0.001     2013-10-14 02:15:52Z
          - Initial release.