@@ -15,7 +15,7 @@ use Path::Tiny;
     {
         return {
             provides => {
-                'Foo::Bar' => { file => 'lib/Foo/Bar.pm', version => '0' },
+                'Foo::Bar' => { file => 'lib/Foo/Bar.pm', version => '4.00' },
             },
         };
     }
@@ -70,6 +70,60 @@ use Path::Tiny;
         exception { $tzil->build },
         undef,
         'build is not aborted - develop prereq listed in "provides"',
+    );
+
+    diag 'got log messages: ', explain $tzil->log_messages
+        if not Test::Builder->new->is_passing;
+}
+
+{
+    my $tzil = Builder->from_config(
+        { dist_root => 't/does_not_exist' },
+        {
+            add_files => {
+                path(qw(source dist.ini)) => simple_ini(
+                    'GatherDir',
+                    'CheckSelfDependency',
+                    [ 'Prereqs / DevelopRequires' => { 'Foo::Bar' => '4.00' } ],
+                    [ '=inc::Provider' ],
+                ),
+                path(qw(source lib Foo Bar.pm)) => "package Foo::Bar;\n1;\n",
+            },
+        },
+    );
+
+    $tzil->chrome->logger->set_debug(1);
+    is(
+        exception { $tzil->build },
+        undef,
+        'build is not aborted - develop prereq listed in "provides" satisfies the prereq',
+    );
+
+    diag 'got log messages: ', explain $tzil->log_messages
+        if not Test::Builder->new->is_passing;
+}
+
+{
+    my $tzil = Builder->from_config(
+        { dist_root => 't/does_not_exist' },
+        {
+            add_files => {
+                path(qw(source dist.ini)) => simple_ini(
+                    'GatherDir',
+                    'CheckSelfDependency',
+                    [ 'Prereqs / DevelopRequires' => { 'Foo::Bar' => '4.01' } ],
+                    [ '=inc::Provider' ],
+                ),
+                path(qw(source lib Foo Bar.pm)) => "package Foo::Bar;\n1;\n",
+            },
+        },
+    );
+
+    $tzil->chrome->logger->set_debug(1);
+    like(
+        exception { $tzil->build },
+        qr{Foo::Bar 4.01 is listed as a develop prereq, but this dist doesn't provide that version \(lib/Foo/Bar.pm only has 4\.00\)!},
+        'build is aborted - develop prereq listed in "provides" does not satisfy the prereq',
     );
 
     diag 'got log messages: ', explain $tzil->log_messages
