@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
           - drop prereq requirement on Dist::Zilla 5.x
+          - check against the version being required, not just the module,
+            when this is relevant (for develop prereqs)
 
 0.007     2014-01-25 03:20:52Z
           - now using a filefinder to find all modules to check -- now only
